tests/js/success/ast_nestedfundecl1.js
y = 1;
obj = {y:10};
with (obj) {
  function f() {
    return y;
  }
}

alert(f());
f();
y;
