tests/js/error/astRewrite/ast_disamb16.js
lab: { while(true) continue lab; }
